; ModuleID = '/home/carl/AnghaBench/netdata/database/extr_rrdhost.c_rrdhost_free_all.c'
source_filename = "/home/carl/AnghaBench/netdata/database/extr_rrdhost.c_rrdhost_free_all.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@localhost = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @rrdhost_free_all() #0 {
  %1 = call i32 (...) @rrd_wrlock()
  br label %2

2:                                                ; preds = %5, %0
  %3 = load i64, i64* @localhost, align 8
  %4 = icmp ne i64 %3, 0
  br i1 %4, label %5, label %8

5:                                                ; preds = %2
  %6 = load i64, i64* @localhost, align 8
  %7 = call i32 @rrdhost_free(i64 %6)
  br label %2

8:                                                ; preds = %2
  %9 = call i32 (...) @rrd_unlock()
  ret void
}

declare dso_local i32 @rrd_wrlock(...) #1

declare dso_local i32 @rrdhost_free(i64) #1

declare dso_local i32 @rrd_unlock(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
